objects/Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Description of the exception occurred.</description>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who was trying to execute the DML operation due to which exception occured</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <description>sObject on which exception occurred while doing a DML operation.</description>
        <label>sObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object will store the exception message details encountered by the end user.  Use ExceptionUtilities.insertException to insert an exception in to this object.</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXP-{00000000}-{MM}-{DD}-{YYYY}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>